sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:15: error: ';' expected but 'else' found.
    else{
    ^