sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i = 1
  while(i<getNombreValeurs){
    if(i== -1){
      i+=1
    }
    if(i==getNombreValeurs-1){
      return
    }
    while(plusPetit(i,i+1)==false){
      echange(i,i+1)
      i-=1
    }
    else{
      i+=1
    }
	}
}